[gd_scene load_steps=24 format=3 uid="uid://camalbrktqpg8"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_addim"]
[ext_resource type="Texture2D" uid="uid://bnye07x8pbveq" path="res://assets/player/Armless_John_icon.png" id="2_knqh2"]
[ext_resource type="PackedScene" uid="uid://b376j83g13dew" path="res://scenes/player/dodge_animation.tscn" id="2_mccd2"]
[ext_resource type="PackedScene" uid="uid://dsdd53qrh60xs" path="res://scenes/player/Player_death_pre_fab.tscn" id="3_e6meh"]
[ext_resource type="PackedScene" uid="uid://ve0ywo2sjf41" path="res://scenes/cards/levelup_card.tscn" id="4_mrtwe"]
[ext_resource type="PackedScene" uid="uid://bqocrwqyb0xyx" path="res://scenes/cards/damage_card.tscn" id="5_nxk2k"]
[ext_resource type="PackedScene" uid="uid://8kio273vv7x8" path="res://scenes/cards/heal_card.tscn" id="6_8vy1d"]
[ext_resource type="Texture2D" uid="uid://dvsdn2bigrcba" path="res://assets/player/Armless_John_spritesheet.png" id="7_8m0hp"]
[ext_resource type="AudioStream" uid="uid://33gyglut6bm6" path="res://assets/sounds/shot_sound.wav" id="16_3dtrr"]
[ext_resource type="AudioStream" uid="uid://dhbagpnbb70hj" path="res://assets/sounds/player_hit.wav" id="17_74taa"]
[ext_resource type="AudioStream" uid="uid://dv6wa6mo4tisn" path="res://assets/sounds/heal.wav" id="18_7qy24"]
[ext_resource type="AudioStream" uid="uid://sud7dx1lajfa" path="res://assets/sounds/junk_sound.wav" id="19_ku8pm"]
[ext_resource type="AudioStream" uid="uid://3x36pmtpadsp" path="res://assets/sounds/dodge_sound.wav" id="20_lo7d6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aqleq"]
radius = 7.01783

[sub_resource type="Animation" id="Animation_n2gxu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_a5f4i"]
resource_name = "idle_down"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j7tlk"]
resource_name = "idle_side"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_pduph"]
resource_name = "idle_up"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_bh2fa"]
resource_name = "walk_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="Animation" id="Animation_xmme5"]
resource_name = "walk_side"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="Animation" id="Animation_hq7xj"]
resource_name = "walk_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0dco8"]
_data = {
"RESET": SubResource("Animation_n2gxu"),
"idle_down": SubResource("Animation_a5f4i"),
"idle_side": SubResource("Animation_j7tlk"),
"idle_up": SubResource("Animation_pduph"),
"walk_down": SubResource("Animation_bh2fa"),
"walk_side": SubResource("Animation_xmme5"),
"walk_up": SubResource("Animation_hq7xj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8kbvh"]
size = Vector2(14, 16)

[node name="ArmlessJohn" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
collision_mask = 4410
slide_on_ceiling = false
floor_stop_on_slope = false
floor_block_on_wall = false
floor_max_angle = 0.0
floor_snap_length = 0.0
platform_on_leave = 2
platform_floor_layers = 0
safe_margin = 0.001
script = ExtResource("1_addim")
char_name = "Armless John"
char_sprite = ExtResource("2_knqh2")
dodge_prefab = ExtResource("2_mccd2")
player_death_prefab = ExtResource("3_e6meh")
level_up_card = ExtResource("4_mrtwe")
damage_amount_card = ExtResource("5_nxk2k")
heal_amount_card = ExtResource("6_8vy1d")
player_base_max_health = 30.0
player_base_heal_mod = 1
player_base_speed = 50
player_base_max_rad = 100
player_base_rad_mod = 1.0
player_base_shoot_cooldown = 1.0
player_base_weapon_damage = 1
player_base_weapon_bullet_speed = 1
player_base_max_stat_mutations_mod = 4
player_base_max_attack_mutations_mod = 4
player_base_mutation_damage_mod = 1.0
player_base_mutation_speed_mod = 1.0
player_base_mutation_area_mod = 1.0
player_base_mutation_timer_mod = 1.0
player_base_dodge_cooldown = 1.2
player_base_dodge_speed = 500.0
player_base_dodge_lenght = 1.5

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("CircleShape2D_aqleq")

[node name="PlayerSprite" type="Sprite2D" parent="."]
rotation = 6.28319
texture = ExtResource("7_8m0hp")
hframes = 9

[node name="MoveAnimation" type="AnimationPlayer" parent="PlayerSprite"]
process_mode = 1
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_0dco8")
}

[node name="DodgeTimer" type="Timer" parent="."]
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_8kbvh")
debug_color = Color(1, 0, 0, 0)

[node name="BulletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_3dtrr")
volume_db = -15.0

[node name="DamageAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_74taa")
volume_db = -10.0

[node name="HealAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_7qy24")
volume_db = -10.0

[node name="JunkCollectedAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_ku8pm")
volume_db = -10.0
pitch_scale = 0.4

[node name="DodgeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_lo7d6")
volume_db = -15.0
pitch_scale = 1.2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_started" from="PlayerSprite/MoveAnimation" to="." method="_on_move_animation_animation_started"]
[connection signal="timeout" from="DodgeTimer" to="." method="_on_dodge_timer_timeout"]
[connection signal="mouse_entered" from="HitBox" to="." method="_on_hit_box_mouse_entered"]
[connection signal="mouse_exited" from="HitBox" to="." method="_on_hit_box_mouse_exited"]
